# TODO-HACKATHON-2

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  AUTHENTICATION_TESTING_GUIDE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  Untitled  test_mcp_config.md
.claude/: mcp_settings.json  settings.local.json
.claude/skills/: k8s-minikube-dev.skill
.specify/: config.yaml  config.yml
.specify/memory/: CLAUDE.md  constitution.md
.specify/templates/: CLAUDE.md  plan-template.md  tasks-template.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  add_tool_calls_column.py  chatkit_server.py  main.py  make_conversation_nullable.py  pyproject.toml  run_migration.py  test_chatbot_report.json  uvicorn_config.py
backend/ai_agent/: CLAUDE.md  __init__.py  agent.py  agent_simple.py  agent_streaming.py  tool_wrappers.py
backend/api/: CLAUDE.md  auth.py  chat.py  deps.py  tasks.py
backend/core/: CLAUDE.md  config.py  database.py  deps.py  logging.py  middleware.py  security.py  validators.py
backend/docs/: CHATBOT_INTEGRATION.md  INTEGRATION_STATUS.md
backend/mcp_server/: __init__.py  server.py
backend/mcp_server/tools/: CLAUDE.md  __init__.py  add_task.py  complete_all_tasks.py  complete_task.py  delete_all_tasks.py  delete_task.py  list_tasks.py  update_task.py
backend/migrations/: 001_add_user_id_index.sql  002_add_conversation_and_message_tables.sql  003_add_due_date_and_priority_to_tasks.sql  004_add_performance_indexes.sql  005_add_tags_to_tasks.sql  008_add_advanced_features.sql  009_fix_priority_case.sql  CLAUDE.md  migrate_threads.sql  run_migration.py  verify_schema.py
backend/models/: CLAUDE.md  __init__.py  conversation.py  message.py  recurrence.py  task.py  thread.py  user.py
backend/scripts/: TESTING_GUIDE.md  init_db.py  migrate_to_new_auth.py  test_chatbot_prompts.py  validate_chat_integration.py
backend/services/: CLAUDE.md  __init__.py  audit.py  chatkit_store.py  conversation.py  nlp_service.py  rate_limiter.py  recurrence_service.py  security.py
backend/src/backend/: CLAUDE.md
backend/tests/: CLAUDE.md  conftest.py  test_api_tasks.py
backend/tests/contract/: test_chat_api.py
backend/tests/integration/: CLAUDE.md  test_chat_task_creation.py  test_chat_task_listing.py  test_conversation_persistence.py  test_websocket.py  test_websocket_events.py
backend/ws_manager/: CLAUDE.md  __init__.py  events.py  manager.py
frontend/: .dockerignore  API_PROXY_GUIDE.md  CLAUDE.md  Dockerfile  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
k8s/: CLAUDE.md  README.md  TROUBLESHOOTING.md  ai-devops.md
k8s/todo-list-hackathon/: CLAUDE.md  Chart.yaml  README.md  values-local.yaml  values-production.yaml  values.yaml
mcp-servers/: README.md
mcp-servers/specifyplus-prompts/: .gitignore  HTTP_SETUP.md  MANUAL_START.md  README.md  main.py  pyproject.toml  run_server.sh  test_mvp.py
mcp-servers/specifyplus-prompts/src/specifyplus_prompts/: __init__.py  file_watcher.py  models.py  prompt_loader.py  server.py
mcp-servers/specifyplus-prompts/tests/: __init__.py  test_file_watcher.py  test_ide_integration.py  test_prompt_loader.py
migrations/: add_priority_tags_due_date.sql
phase-1-cli-tui/: README.md  pyproject.toml
phase-2-web-app/: .env.example
scripts/: CLAUDE.md  build-and-load-all.sh  deploy-all.sh  docker-build-backend.sh  docker-build-frontend.sh  scan-images.sh
specs/: CLAUDE.md  HACKATHON-SPRINT.md
specs/001-backend-task-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-user-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-server-prompts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend-task-manager/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ai-chatbot/: CLAUDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ux-improvement/: CLAUDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-k8s-deployment/: CLAUDE.md  constitution-check.md  data-model.md  plan.md  research.md  (+3 more)
(+253 files in other folders)
