[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GrowWidTalha", email = "growwithtalha2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.8.2",
    "mcp>=0.9.0",
    "openai>=1.0.0",
    "openai-agents>=0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "websockets>=13.0,<14.0",  # Override uvicorn's websockets for legacy module
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
addopts = "-v --strict-markers"

# Note: uv doesn't support [tool.uv.scripts] - run scripts directly
# Example: uv run uvicorn main:app --reload

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
