[project]
name = "specifyplus-prompts"
version = "0.1.0"
description = "MCP server for SpecifyPlus command prompts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp<3",
    "pydantic>=2.0.0",
    "frontmatter>=3.0.0",
    "watchfiles>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
